--- a/raum3.html
+++ b/raum3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>DEMO - WorkstationToolCheck</title>
-        <link href="Styles/index.css" rel="stylesheet">
+        <link href="Styles/raum.css" rel="stylesheet">
     </head>
     <body>
         <div id="container">
