--- a/raum3.html
+++ b/raum3.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8"/>
         <title>DEMO - WorkstationToolCheck</title>
         <link href="Styles/raum.css" rel="stylesheet">
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="container">
