--- a/qrcode-gen.html
+++ b/qrcode-gen.html
@@ -17,7 +17,7 @@
             <a href="index.html"><h1>WTC - DEMO</h1></a>  
         </div>
         
-        <form onload="FormPruefung()" id="eingabe_div">
+        <form id="eingabe_div">
             <input type="text" placeholder="Raumname" id="in_a" class="in_aa">
             <input type="text" placeholder="Tischnummer" id="in_b" class="in_aa">
         </form>
