DEMO Bezeichnung entfernt und Repository umbenannt

--- a/tisch-vorlage.html
+++ b/tisch-vorlage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>DEMO - WorkstationToolCheck</title>
+        <title>WTC - WorkstationToolCheck</title>
         <link href="Styles/tisch.css" rel="stylesheet">
 
         <!-- UIKIT und BOOTSTRAP EINBINDUNG -->
@@ -15,7 +15,7 @@
         <div id="container">
         
         <div id="titel">
-            <a href="index.html"><h1>WTC - DEMO</h1></a>  
+            <a href="index.html"><h1>WTC - WorkstationToolCheck</h1></a>  
         </div>
             
         <div id="tisch_id">
