--- a/qrcode-gen.html
+++ b/qrcode-gen.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>DEMO - WorkstationToolCheck</title>
+        <title>WTC - WorkstationToolCheck</title>
         <link href="Styles/qrcode.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -18,7 +18,7 @@
         <div id="container">
         
         <div id="titel">
-            <a href="index.html"><h1>WTC - DEMO</h1></a>  
+            <a href="index.html"><h1>WTC - WorkstationToolCheck</h1></a>  
         </div>
         
         <form id="eingabe_div">
