--- a/WebApp/pic.html
+++ b/WebApp/pic.html
@@ -1,14 +1,16 @@
 <Html>
     <head>
         <link href="Styles/qrcode.css" rel="stylesheet">
-    </head>
-        
+    </head>      
     <body>
-
          <div id="content">
-            <img id="pic" src="../Bilder/raum2/raum2edited.jpeg" alt="NIX ZU SEHEN">
-         </div>         
-        
-    </body>
 
+
+
+            <img id="pic" class="pic" src="../Bilder/raum2/raum2edited.jpeg" alt="">
+
+
+
+         </div>         
+    </body>
 </Html>
